crates/python_parser/src/snapshots/python_parser__string__tests__parse_fstring_yield_expr.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..10,
            value: FString(
                FStringExpr {
                    range: 0..10,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..10,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..9,
                                                expression: Yield(
                                                    YieldExpr {
                                                        range: 3..8,
                                                        value: None,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
