crates/python_parser/src/snapshots/python_parser__string__tests__parse_string_concat.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..16,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..16,
                    value: StringLiteralValue {
                        inner: Concatenated(
                            ConcatenatedStringLiteral {
                                strings: [
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        unicode: false,
                                    },
                                    StringLiteral {
                                        range: 9..16,
                                        value: "world",
                                        unicode: false,
                                    },
                                ],
                                value: "Hello world",
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
