crates/python_parser/src/snapshots/python_parser__string__tests__parse_string_triple_quotes_with_kind.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..20,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..20,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..20,
                                value: "Hello, world!",
                                unicode: true,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
