crates/python_parser/src/snapshots/python_parser__string__tests__parse_u_f_string_concat_1.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..18,
            value: FString(
                FStringExpr {
                    range: 0..18,
                    value: FStringValue {
                        inner: Concatenated(
                            [
                                Literal(
                                    StringLiteral {
                                        range: 0..9,
                                        value: "Hello ",
                                        unicode: true,
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 10..18,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 12..17,
                                                    value: "world",
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
