crates/python_parser/src/snapshots/python_parser__string__tests__parse_u_f_string_concat_2.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..22,
            value: FString(
                FStringExpr {
                    range: 0..22,
                    value: FStringValue {
                        inner: Concatenated(
                            [
                                Literal(
                                    StringLiteral {
                                        range: 0..9,
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            prefix: Unicode,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 10..18,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 12..17,
                                                    value: "world",
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                Literal(
                                    StringLiteral {
                                        range: 19..22,
                                        value: "!",
                                        flags: StringLiteralFlags {
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
