crates/python_parser/src/snapshots/python_parser__string__tests__parse_u_string_concat_1.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..17,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..17,
                    value: StringLiteralValue {
                        inner: Concatenated(
                            ConcatenatedStringLiteral {
                                strings: [
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        unicode: false,
                                    },
                                    StringLiteral {
                                        range: 9..17,
                                        value: "world",
                                        unicode: true,
                                    },
                                ],
                                value: "Hello world",
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
