crates/python_parser/src/snapshots/python_parser__string__tests__raw_byte_literal_1.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..8,
            value: BytesLiteral(
                BytesLiteralExpr {
                    range: 0..8,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..8,
                                value: [
                                    92,
                                    120,
                                    49,
                                    122,
                                ],
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
