crates/python_parser/src/snapshots/python_parser__string__tests__raw_byte_literal_2.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..6,
            value: BytesLiteral(
                BytesLiteralExpr {
                    range: 0..6,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..6,
                                value: [
                                    92,
                                    92,
                                ],
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
