crates/python_parser/src/snapshots/python_parser__string__tests__raw_fstring.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..7,
            value: FString(
                FStringExpr {
                    range: 0..7,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..7,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 3..6,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 4..5,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Raw {
                                            uppercase_r: false,
                                        },
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
